--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ permissions:
   contents: write # Grants permissions to write to the repo
 
 env:
-  GIT_USER_EMAIL: thevendetta0x@gmail.com
-  GIT_USER_NAME: 0xVendetta
+  GIT_USER_EMAIL: andrewjames71230@gmail.com
+  GIT_USER_NAME: AndrewJJJJ
 
 jobs:
   ethereum_auto_commit:
